[project]
name = "datus-bi-core"
version = "0.1.2"
description = "Core BI abstractions for Datus adapters"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "DatusAI", email = "support@datus.ai"}]
keywords = ["datus", "bi", "dashboard", "adapter", "core"]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_bi_core"]
