[project]
name = "datus-bi-grafana"
version = "0.1.0"
description = "Grafana BI adapter for Datus"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "DatusAI", email = "support@datus.ai"}]
dependencies = [
    "datus-bi-core>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.entry-points."datus.bi_adapters"]
grafana = "datus_bi_grafana:register"

[tool.uv.sources]
datus-bi-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_bi_grafana"]
