[project]
name = "datus-bi-superset"
version = "0.1.3"
description = "Apache Superset BI adapter for Datus"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "DatusAI", email = "support@datus.ai"}]
dependencies = [
    "datus-bi-core>=0.1.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "sqlglot>=20.0.0",
]

[project.entry-points."datus.bi_adapters"]
superset = "datus_bi_superset:register"

[tool.uv.sources]
datus-bi-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_bi_superset"]
